# bai

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: check.yml  main.yml  release.yml
src/: config.rs  groups.rs  help.txt  ident.pcre  main.rs  options.rs  regext.rs
static/: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .rustfmt.toml  .stylelintrc.json  .swift-format.json  Cargo.toml  LICENCE  LICENCE-APACHE  LICENSE  LICENSE-APACHE  LICENSE-MIT  deno.jsonc  fly.toml  gleam.toml  go.mod  main.go  package.json  tailwind.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts
static/.github/: FUNDING.yml
static/.github/workflows/: main.yml
static/@0bsd/: LICENSE
static/@gleam/: Dockerfile
static/@gleam-community/: CODE_OF_CONDUCT.md
static/@gleam/.github/workflows/: check.yml  main.yml  release.yml
static/@go/.github/workflows/: check.yml  main.yml
static/@node/.github/workflows/: check.yml  main.yml
static/@react/: .prettierrc.json  package.json  tsconfig.json
static/@rust/.github/workflows/: check.yml  main.yml  release.yml
static/src/: $$name$$.gleam  $$name$$.tsx  App.tsx  index.css  index.html  index.ts  index.tsx
static/test/$$name$$/: example_test.gleam
static/tests/: main.rs
tests/: main.rs  setup.rs
tests/testdata/: .gitignore
