[package]
name = "okie"
version = "0.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = ""
keywords = []
license = "MIT"
homepage = "https://github.com/aslilac/okie"
repository = "https://github.com/aslilac/okie"
documentation = "https://docs.rs/okie"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
once_cell = "1.15.0"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
