[package]
name = "bai"
version = "1.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Create common files from a large collection of templates"
keywords = []
license = "MIT"
homepage = "https://github.com/aslilac/bai"
repository = "https://github.com/aslilac/bai"
documentation = "https://docs.rs/bai"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
colored = "2.0.0"
etcetera = "0.8.0"
once_cell = "1.18.0"
regex = "1.9.1"
reqwest = "0.11.18"
serde = { version = "1.0.176", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.6"
toml_edit = "0.19.14"
