[package]
name = "{{ name }}"
version = "0.0.0"
authors = ["{{ author.name }} <{{ author.email }}>"]
description = ""
keywords = []
license = "MIT"
homepage = "https://github.com/{{ github.owner }}/{{ name }}"
repository = "https://github.com/{{ github.owner }}/{{ name }}"
documentation = "https://docs.rs/{{ name }}"
edition = "2021"

[[bin]]
name = "{{ name }}"
path = "./main.rs"

[dependencies]
