[package]
name = "{{ name }}"
version = "0.0.0"
authors = ["{{ author.name }} <{{ author.email }}>"]
description = ""
keywords = []
license = "MIT"
homepage = "https://mckay.la/{{ name }}"
repository = "https://github.com/{{ github.owner }}/{{ name }}"
documentation = "https://docs.rs/{{ name }}"
edition = "2024"

[dependencies]
